# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes, Piotr Ożarowski

2006-12-13 Piotr Ożarowski <ozarow@gmail.com>
	* Import CSV plugin updated (thanks to Jessica)
	* Fixed "unique name" bug in update poster function
	* Import plugin is a lot faster now

2006-12-12 Piotr Ożarowski <ozarow@gmail.com>
	* Debian files updated
	* Docs updated
	* Some UI improvements
	* Selectable Amazon server (fetch bigger poster)
	* Added "--home" command line option
	* Double click on movies list -> open edit window

2006-12-10 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added three new movie plugins for spanish users -
	  IMDB espana, Culturalia and Film Affinity (thanks to Pedro D. Sánchez)

2006-12-08 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Updated CSFD Plugin to use new website interface (thanks to Blonďák)
	* Updated Czech translation (thanks to Blonďák)
	* ClubeMyDVD movie plugin removed (site no longer exists)
	* Added new portuguese movie plugin (Cineteka)

2006-12-06 Piotr Ożarowski <ozarow@gmail.com>
	* Ask before adding movie which title is already in database
	* New import plugin system (thanks for help, Jessica)
	* CSV import plugin added (thanks to Jessica)
	* IMDb movie plugin updated (thanks to Frank)
	* Added myself to main authors and changed email address

2006-12-04 Piotr Ożarowski <ozarow@gmail.com>
	* Added --check-dep and --show-dep command line options
	* OFDb movie plugin updated (thanks to Jessica)

2006-11-20 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added Brasilian Portuguese translation (thanks to Fábio Nogueira)

2006-11-17 Piotr Ożarowski <ozarow@gmail.com>
	* Default sort column can be set in preferences
	* Menu's show seen/loaned movies only is now used more widely

2006-11-16 Piotr Ożarowski <ozarow@gmail.com>
	* "Edit movie details in 'Add movie' window" transition finished
	* Show right window after editing person's details
	* Added more options to command line
	* GNOME HIG related changes in Glade file (still needs work)
