@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes, Piotr Ożarowski
 
+2006-12-14 Piotr Ożarowski <ozarow@gmail.com>
+	* Search for empty fields only option added
+
 2006-12-13 Piotr Ożarowski <ozarow@gmail.com>
 	* Import CSV plugin updated (thanks to Jessica)
 	* Fixed "unique name" bug in update poster function
